--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ Tests/RRS_Tests/packages/
 /webalizer/
 /xampp/
 applications.html
-bitinami.css
+bitnami.css
 favicon.ico
 hotel_management-master.zip
 index.php
